--- a/sass/common/buttons.sass
+++ b/sass/common/buttons.sass
@@ -4,7 +4,7 @@
 	padding: 1rem 1.6rem
 	font-weight: bold
 	transition: none
-	text-transform: capitalize
+	//text-transform: capitalize
 	border: none
 	font-family: $font-header
 	font-weight: 600
@@ -35,7 +35,7 @@
 		border: solid #A0AEC0 1px
 		color: #3B3B3B
 		&:hover, &:focus, &:active
-			background-color: #A0AEC0
-			color: #fff
+			background-color: lighten(#A0AEC0, 25%)
+			//color: #fff
 	a
 		color: #fff
