--- a/sass/sections/index.sass
+++ b/sass/sections/index.sass
@@ -9,10 +9,10 @@
 @import 'testimonials'
 @import 'forms'
 @import 'calendar'
-@import 'footer'
 @import 'news'
 @import 'case-study'
 @import 'security'
 @import 'cloud-share'
 @import 'workflow'
 @import 'process'
+@import 'pricing'
