--- a/sass/sections/workflow.sass
+++ b/sass/sections/workflow.sass
@@ -47,6 +47,8 @@ section.workflow
 			color: #3B3B3B
 			margin-bottom: 4rem
 			width: 100%
+			font-size: 1.6rem
+			font-weight: 600
 			@include media-breakpoint-up(md)
 				width: auto
 			@include media-breakpoint-up(lg)
